--- a/config/crd/bases/windtunnel.plantd.org_plantdcores.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_plantdcores.yaml
@@ -355,6 +355,13 @@ spec:
                           Limits. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
                         type: object
                     type: object
+                  storageSize:
+                    anyOf:
+                    - type: integer
+                    - type: string
+                    description: Storage size. Should not be modified once set.
+                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                    x-kubernetes-int-or-string: true
                 type: object
               studio:
                 description: PlantD-Studio configuration.
@@ -421,9 +428,13 @@ spec:
                 description: Thanos configuration.
                 properties:
                   compactor:
-                    description: Thanos-Compactor configuration. This field is ignored
-                      if `objectStoreConfig` is not set.
+                    description: Thanos-Compactor configuration. The `compactor.image`
+                      field is always ignored. This field is ignored if `objectStoreConfig`
+                      is not set.
                     properties:
+                      image:
+                        description: Container image to use.
+                        type: string
                       replicas:
                         description: Number of replicas.
                         format: int32
@@ -482,7 +493,7 @@ spec:
                         anyOf:
                         - type: integer
                         - type: string
-                        description: Storage size.
+                        description: Storage size. Should not be modified once set.
                         pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                         x-kubernetes-int-or-string: true
                     type: object
@@ -512,9 +523,12 @@ spec:
                     type: object
                     x-kubernetes-map-type: atomic
                   querier:
-                    description: Thanos-Querier configuration. The `querier.storageSize`
-                      field is always ignored.
+                    description: Thanos-Querier configuration. The `querier.image`
+                      and `querier.storageSize` fields are always ignored.
                     properties:
+                      image:
+                        description: Container image to use.
+                        type: string
                       replicas:
                         description: Number of replicas.
                         format: int32
@@ -573,14 +587,18 @@ spec:
                         anyOf:
                         - type: integer
                         - type: string
-                        description: Storage size.
+                        description: Storage size. Should not be modified once set.
                         pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                         x-kubernetes-int-or-string: true
                     type: object
                   sidecar:
-                    description: Thanos-Sidecar configuration. The `sidecar.replicas`
-                      and `sidecar.storageSize` fields are always ignored.
+                    description: Thanos-Sidecar configuration. The `sidecar.replicas`,
+                      `sidecar.image` and `sidecar.storageSize` fields are always
+                      ignored.
                     properties:
+                      image:
+                        description: Container image to use.
+                        type: string
                       replicas:
                         description: Number of replicas.
                         format: int32
@@ -639,14 +657,18 @@ spec:
                         anyOf:
                         - type: integer
                         - type: string
-                        description: Storage size.
+                        description: Storage size. Should not be modified once set.
                         pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                         x-kubernetes-int-or-string: true
                     type: object
                   store:
-                    description: Thanos-Store configuration. This field is ignored
-                      if `objectStoreConfig` is not set.
+                    description: Thanos-Store configuration. The `store.image` field
+                      is always ignored. This field is ignored if `objectStoreConfig`
+                      is not set.
                     properties:
+                      image:
+                        description: Container image to use.
+                        type: string
                       replicas:
                         description: Number of replicas.
                         format: int32
@@ -705,7 +727,7 @@ spec:
                         anyOf:
                         - type: integer
                         - type: string
-                        description: Storage size.
+                        description: Storage size. Should not be modified once set.
                         pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                         x-kubernetes-int-or-string: true
                     type: object
