--- a/bundle.yaml
+++ b/bundle.yaml
@@ -1417,7 +1417,7 @@ spec:
                     anyOf:
                     - type: integer
                     - type: string
-                    description: Storage size. Should not be modified once set.
+                    description: Storage size.
                     pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                     x-kubernetes-int-or-string: true
                 type: object
@@ -1551,7 +1551,7 @@ spec:
                         anyOf:
                         - type: integer
                         - type: string
-                        description: Storage size. Should not be modified once set.
+                        description: Storage size.
                         pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                         x-kubernetes-int-or-string: true
                     type: object
@@ -1645,7 +1645,7 @@ spec:
                         anyOf:
                         - type: integer
                         - type: string
-                        description: Storage size. Should not be modified once set.
+                        description: Storage size.
                         pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                         x-kubernetes-int-or-string: true
                     type: object
@@ -1715,7 +1715,7 @@ spec:
                         anyOf:
                         - type: integer
                         - type: string
-                        description: Storage size. Should not be modified once set.
+                        description: Storage size.
                         pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                         x-kubernetes-int-or-string: true
                     type: object
@@ -1785,7 +1785,7 @@ spec:
                         anyOf:
                         - type: integer
                         - type: string
-                        description: Storage size. Should not be modified once set.
+                        description: Storage size.
                         pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                         x-kubernetes-int-or-string: true
                     type: object
