--- a/config/crd/bases/windtunnel.plantd.org_datasets.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_datasets.yaml
@@ -21,15 +21,15 @@ spec:
     - jsonPath: .status.pvcStatus
       name: VolumeStatus
       type: string
+    - jsonPath: .status.errorCount
+      name: ErrorCount
+      type: integer
     - jsonPath: .status.startTime
       name: StartTime
       type: string
     - jsonPath: .status.completionTime
       name: CompletionTime
       type: string
-    - jsonPath: .status.errorCount
-      name: ErrorCount
-      type: integer
     name: v1alpha1
     schema:
       openAPIV3Schema:
@@ -78,6 +78,7 @@ spec:
                   and `compressPerSchema` is `true`, this is the total number of compressed
                   files.
                 format: int32
+                minimum: 1
                 type: integer
               parallelism:
                 description: Number of parallel jobs when generating the dataset.
@@ -102,10 +103,12 @@ spec:
                       properties:
                         max:
                           description: Maximum value of the range.
+                          format: int32
                           minimum: 0
                           type: integer
                         min:
                           description: Minimum value of the range.
+                          format: int32
                           minimum: 0
                           type: integer
                       required:
@@ -118,10 +121,12 @@ spec:
                       properties:
                         max:
                           description: Maximum value of the range.
+                          format: int32
                           minimum: 0
                           type: integer
                         min:
                           description: Minimum value of the range.
+                          format: int32
                           minimum: 0
                           type: integer
                       required:
@@ -132,6 +137,7 @@ spec:
                   - name
                   - numRecords
                   type: object
+                minItems: 1
                 type: array
               storageSize:
                 anyOf:
@@ -182,6 +188,9 @@ spec:
                 type: string
             type: object
         type: object
+        x-kubernetes-validations:
+        - message: must contain at most 39 characters
+          rule: size(self.metadata.name) <= 39
     served: true
     storage: true
     subresources:
